fix tab spacing issue

--- a/src/static/src/styles/component-tabs.scss
+++ b/src/static/src/styles/component-tabs.scss
@@ -23,7 +23,7 @@
   display: block;
 
   margin-right: 0.25rem;
-  padding: 0.6125rem 1rem;
+  padding: 0.625rem 1rem;
 
   border-top-left-radius: $border-radius;
   border-top-right-radius: $border-radius;
